--- a/MALPI/index.html
+++ b/MALPI/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <head>
-      <title>MNIST latent space PCA</title>
+      <title>MNIST's Autoencoder Latent Space's Principle Component Interpolation</title>
       <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
       <link rel="stylesheet" href="./index.css">
       <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@0.15.1/dist/tf.min.js"></script>
