Add link to othello

--- a/index.html
+++ b/index.html
@@ -45,6 +45,22 @@
             </div>
         </div>
 
+        <div class='col s4'>
+            <div class='card small hoverable waves-effect' onclick="window.location.href = 'https://thanadolps.github.io/othello-wasm/othello'">
+                <div class='card-image' style='object-position: 50% 50%'>
+                    <img src='Card Image/othello.PNG'>
+                    <span class='card-title'>
+                        Othello Wasm
+                    </span>
+                </div>
+                <div class='card-content'>
+                    <p>
+                        Othello game with AI implemented in Rust and render to web using wasm
+                    </p>
+                </div>
+            </div>
+        </div>
+
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
